--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 This project determines 2d species concentration in a catalyst, and it
 determines conversion efficiency as a function of flow rate and
 temperature.  
+
+It requires a modules from another project called Properties.  The
+properties.py modules is used to evaluate the properties of ideal
+gases.
